Code2Xml.Languages/Obsolete.ANTLRv3/Lua/CodeToXmls/LuaParser.cs
using Code2Xml.Core.Antlr;
using System;
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 Lua.g 2012-03-01 00:37:57

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class LuaParser : Antlr.Runtime.Parser, IAntlrParser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHARSTRING", "COMMENT", "EXP", "EscapeSequence", "FLOAT", "HEX", "HexDigit", "INT", "LINE_COMMENT", "LONGSTRING", "NAME", "NEWLINE", "NORMALSTRING", "OctalEscape", "UnicodeEscape", "WS", "'#'", "'%'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'..'", "'...'", "'/'", "':'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'^'", "'and'", "'break'", "'do'", "'else'", "'elseif'", "'end'", "'false'", "'for'", "'function'", "'if'", "'in'", "'local'", "'nil'", "'not'", "'or'", "'repeat'", "'return'", "'then'", "'true'", "'until'", "'while'", "'{'", "'}'", "'~='"
	};
	public const int EOF=-1;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int CHARSTRING=4;
	public const int COMMENT=5;
	public const int EXP=6;
	public const int EscapeSequence=7;
	public const int FLOAT=8;
	public const int HEX=9;
	public const int HexDigit=10;
	public const int INT=11;
	public const int LINE_COMMENT=12;
	public const int LONGSTRING=13;
	public const int NAME=14;
	public const int NEWLINE=15;
	public const int NORMALSTRING=16;
	public const int OctalEscape=17;
	public const int UnicodeEscape=18;
	public const int WS=19;

	public LuaParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public LuaParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		XmlTreeAdaptor treeAdaptor = default(XmlTreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new XmlTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref XmlTreeAdaptor adaptor);

	private XmlTreeAdaptor adaptor;

	public XmlTreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return LuaParser.tokenNames; } }
	public override string GrammarFileName { get { return "Lua.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_chunk();
	partial void LeaveRule_chunk();

	// $ANTLR start "chunk"
	// Lua.g:23:1: chunk : ( stat ( ';' )? )* ( laststat ( ';' )? )? ;
	[GrammarRule("chunk")]
	public XAstParserRuleReturnScope chunk()
	{
		EnterRule_chunk();
		EnterRule("chunk", 1);
		var retval = new XAstParserRuleReturnScope("chunk");
		
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal2 = default(IToken);
		IToken char_literal4 = default(IToken);
		XAstParserRuleReturnScope stat1 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope laststat3 = default(XAstParserRuleReturnScope);

		object char_literal2_tree = default(object);
		object char_literal4_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "chunk");
		DebugLocation(23, 41);
		try
		{
			// Lua.g:23:7: ( ( stat ( ';' )? )* ( laststat ( ';' )? )? )
			DebugEnterAlt(1);
			// Lua.g:23:9: ( stat ( ';' )? )* ( laststat ( ';' )? )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(23, 9);
			// Lua.g:23:9: ( stat ( ';' )? )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==NAME||LA2_0==22||LA2_0==45||(LA2_0>=50 && LA2_0<=52)||LA2_0==54||LA2_0==58||LA2_0==63))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// Lua.g:23:10: stat ( ';' )?
					{
					DebugLocation(23, 10);
					PushFollow(Follow._stat_in_chunk46);
					stat1=stat();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, stat1.Tree, stat1, retval);
					DebugLocation(23, 15);
					// Lua.g:23:15: ( ';' )?
					int alt1=2;
					try { DebugEnterSubRule(1);
					try { DebugEnterDecision(1, false);
					int LA1_0 = input.LA(1);

					if ((LA1_0==33))
					{
						alt1 = 1;
					}
					} finally { DebugExitDecision(1); }
					switch (alt1)
					{
					case 1:
						DebugEnterAlt(1);
						// Lua.g:23:16: ';'
						{
						DebugLocation(23, 16);
						char_literal2=(IToken)Match(input,33,Follow._33_in_chunk49); if (state.failed) return retval;
						if (state.backtracking == 0) {
						char_literal2_tree = (object)adaptor.Create(char_literal2, retval);
						adaptor.AddChild(root_0, char_literal2_tree);
						}

						}
						break;

					}
					} finally { DebugExitSubRule(1); }


					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }

			DebugLocation(23, 24);
			// Lua.g:23:24: ( laststat ( ';' )? )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_0 = input.LA(1);

			if ((LA4_0==44||LA4_0==59))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// Lua.g:23:25: laststat ( ';' )?
				{
				DebugLocation(23, 25);
				PushFollow(Follow._laststat_in_chunk56);
				laststat3=laststat();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, laststat3.Tree, laststat3, retval);
				DebugLocation(23, 34);
				// Lua.g:23:34: ( ';' )?
				int alt3=2;
				try { DebugEnterSubRule(3);
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==33))
				{
					alt3 = 1;
				}
				} finally { DebugExitDecision(3); }
				switch (alt3)
				{
				case 1:
					DebugEnterAlt(1);
					// Lua.g:23:35: ';'
					{
					DebugLocation(23, 35);
					char_literal4=(IToken)Match(input,33,Follow._33_in_chunk59); if (state.failed) return retval;
					if (state.backtracking == 0) {
					char_literal4_tree = (object)adaptor.Create(char_literal4, retval);
					adaptor.AddChild(root_0, char_literal4_tree);
					}

					}
					break;

				}
				} finally { DebugExitSubRule(3); }


				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("chunk", 1);
			LeaveRule("chunk", 1);
			LeaveRule_chunk();
		}
		DebugLocation(23, 41);
		} finally { DebugExitRule(GrammarFileName, "chunk"); }
		return retval;

	}
	// $ANTLR end "chunk"

	partial void EnterRule_block();
	partial void LeaveRule_block();

	// $ANTLR start "block"
	// Lua.g:25:1: block : chunk ;
	[GrammarRule("block")]
	public XAstParserRuleReturnScope block()
	{
		EnterRule_block();
		EnterRule("block", 2);
		var retval = new XAstParserRuleReturnScope("block");
		
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		XAstParserRuleReturnScope chunk5 = default(XAstParserRuleReturnScope);

		try { DebugEnterRule(GrammarFileName, "block");
		DebugLocation(25, 13);
		try
		{
			// Lua.g:25:7: ( chunk )
			DebugEnterAlt(1);
			// Lua.g:25:9: chunk
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(25, 9);
			PushFollow(Follow._chunk_in_block71);
			chunk5=chunk();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, chunk5.Tree, chunk5, retval);

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("block", 2);
			LeaveRule("block", 2);
			LeaveRule_block();
		}
		DebugLocation(25, 13);
		} finally { DebugExitRule(GrammarFileName, "block"); }
		return retval;

	}
	// $ANTLR end "block"

	partial void EnterRule_stat();
	partial void LeaveRule_stat();

	// $ANTLR start "stat"
	// Lua.g:27:1: stat : ( varlist1 '=' explist1 | functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end' | 'for' namelist 'in' explist1 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist1 )? );
	[GrammarRule("stat")]
	public XAstParserRuleReturnScope stat()
	{
		EnterRule_stat();
		EnterRule("stat", 3);
		var retval = new XAstParserRuleReturnScope("stat");
		
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal7 = default(IToken);
		IToken string_literal10 = default(IToken);
		IToken string_literal12 = default(IToken);
		IToken string_literal13 = default(IToken);
		IToken string_literal15 = default(IToken);
		IToken string_literal17 = default(IToken);
		IToken string_literal18 = default(IToken);
		IToken string_literal20 = default(IToken);
		IToken string_literal22 = default(IToken);
		IToken string_literal24 = default(IToken);
		IToken string_literal26 = default(IToken);
		IToken string_literal28 = default(IToken);
		IToken string_literal30 = default(IToken);
		IToken string_literal32 = default(IToken);
		IToken string_literal33 = default(IToken);
		IToken NAME34 = default(IToken);
		IToken char_literal35 = default(IToken);
		IToken char_literal37 = default(IToken);
		IToken char_literal39 = default(IToken);
		IToken string_literal41 = default(IToken);
		IToken string_literal43 = default(IToken);
		IToken string_literal44 = default(IToken);
		IToken string_literal46 = default(IToken);
		IToken string_literal48 = default(IToken);
		IToken string_literal50 = default(IToken);
		IToken string_literal51 = default(IToken);
		IToken string_literal54 = default(IToken);
		IToken string_literal55 = default(IToken);
		IToken NAME56 = default(IToken);
		IToken string_literal58 = default(IToken);
		IToken char_literal60 = default(IToken);
		XAstParserRuleReturnScope varlist16 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope explist18 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope functioncall9 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope block11 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope exp14 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope block16 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope block19 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope exp21 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope exp23 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope block25 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope exp27 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope block29 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope block31 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope exp36 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope exp38 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope exp40 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope block42 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope namelist45 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope explist147 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope block49 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope funcname52 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope funcbody53 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope funcbody57 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope namelist59 = default(XAstParserRuleReturnScope);
		XAstParserRuleReturnScope explist161 = default(XAstParserRuleReturnScope);

		object char_literal7_tree = default(object);
		object string_literal10_tree = default(object);
		object string_literal12_tree = default(object);
		object string_literal13_tree = default(object);
		object string_literal15_tree = default(object);
		object string_literal17_tree = default(object);
		object string_literal18_tree = default(object);
		object string_literal20_tree = default(object);
		object string_literal22_tree = default(object);
		object string_literal24_tree = default(object);
		object string_literal26_tree = default(object);
		object string_literal28_tree = default(object);
		object string_literal30_tree = default(object);
		object string_literal32_tree = default(object);
		object string_literal33_tree = default(object);
		object NAME34_tree = default(object);
		object char_literal35_tree = default(object);
		object char_literal37_tree = default(object);
		object char_literal39_tree = default(object);
		object string_literal41_tree = default(object);
		object string_literal43_tree = default(object);
		object string_literal44_tree = default(object);
		object string_literal46_tree = default(object);
		object string_literal48_tree = default(object);
		object string_literal50_tree = default(object);
		object string_literal51_tree = default(object);
		object string_literal54_tree = default(object);
		object string_literal55_tree = default(object);
		object NAME56_tree = default(object);
		object string_literal58_tree = default(object);
		object char_literal60_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "stat");
		DebugLocation(27, 37);
		try
		{
			// Lua.g:27:6: ( varlist1 '=' explist1 | functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end' | 'for' namelist 'in' explist1 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist1 )? )
			int alt9=11;
			try { DebugEnterDecision(9, false);
			switch (input.LA(1))
			{
			case NAME:
				{
				int LA9_1 = input.LA(2);

				if ((EvaluatePredicate(synpred5_Lua_fragment)))
				{
					alt9 = 1;
				}
				else if ((EvaluatePredicate(synpred6_Lua_fragment)))
				{
					alt9 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 9, 1, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 22:
				{
				int LA9_2 = input.LA(2);

				if ((EvaluatePredicate(synpred5_Lua_fragment)))
				{
					alt9 = 1;
				}
				else if ((EvaluatePredicate(synpred6_Lua_fragment)))
				{
					alt9 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 9, 2, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 45:
				{
				alt9 = 3;
				}
				break;
			case 63:
				{
				alt9 = 4;
				}
				break;
			case 58:
				{
				alt9 = 5;
				}
				break;
			case 52:
				{
				alt9 = 6;
				}
				break;
			case 50:
				{
				int LA9_7 = input.LA(2);

				if ((EvaluatePredicate(synpred14_Lua_fragment)))
				{
					alt9 = 7;
				}
				else if ((EvaluatePredicate(synpred15_Lua_fragment)))
				{
					alt9 = 8;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 9, 7, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 51:
				{
				alt9 = 9;
				}
				break;
			case 54:
				{
				int LA9_9 = input.LA(2);

				if ((EvaluatePredicate(synpred17_Lua_fragment)))
				{
					alt9 = 10;
				}
				else if ((true))
				{
					alt9 = 11;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 9, 9, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 9, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(9); }
			switch (alt9)
			{
			case 1:
				DebugEnterAlt(1);
				// Lua.g:27:9: varlist1 '=' explist1
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(27, 9);
				PushFollow(Follow._varlist1_in_stat80);
				varlist16=varlist1();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, varlist16.Tree, varlist16, retval);
				DebugLocation(27, 18);
				char_literal7=(IToken)Match(input,36,Follow._36_in_stat82); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal7_tree = (object)adaptor.Create(char_literal7, retval);
				adaptor.AddChild(root_0, char_literal7_tree);
				}
				DebugLocation(27, 22);
				PushFollow(Follow._explist1_in_stat84);
				explist18=explist1();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, explist18.Tree, explist18, retval);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Lua.g:28:5: functioncall
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(28, 5);
				PushFollow(Follow._functioncall_in_stat93);
				functioncall9=functioncall();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, functioncall9.Tree, functioncall9, retval);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// Lua.g:29:5: 'do' block 'end'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(29, 5);
				string_literal10=(IToken)Match(input,45,Follow._45_in_stat102); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal10_tree = (object)adaptor.Create(string_literal10, retval);
				adaptor.AddChild(root_0, string_literal10_tree);
				}
				DebugLocation(29, 10);
				PushFollow(Follow._block_in_stat104);
				block11=block();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, block11.Tree, block11, retval);
				DebugLocation(29, 16);
				string_literal12=(IToken)Match(input,48,Follow._48_in_stat106); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal12_tree = (object)adaptor.Create(string_literal12, retval);
				adaptor.AddChild(root_0, string_literal12_tree);
				}

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// Lua.g:30:5: 'while' exp 'do' block 'end'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(30, 5);
				string_literal13=(IToken)Match(input,63,Follow._63_in_stat115); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal13_tree = (object)adaptor.Create(string_literal13, retval);
				adaptor.AddChild(root_0, string_literal13_tree);
				}
				DebugLocation(30, 13);
				PushFollow(Follow._exp_in_stat117);
				exp14=exp();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, exp14.Tree, exp14, retval);
				DebugLocation(30, 17);
				string_literal15=(IToken)Match(input,45,Follow._45_in_stat119); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal15_tree = (object)adaptor.Create(string_literal15, retval);
				adaptor.AddChild(root_0, string_literal15_tree);
				}
				DebugLocation(30, 22);
				PushFollow(Follow._block_in_stat121);
				block16=block();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, block16.Tree, block16, retval);
				DebugLocation(30, 28);
				string_literal17=(IToken)Match(input,48,Follow._48_in_stat123); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal17_tree = (object)adaptor.Create(string_literal17, retval);
				adaptor.AddChild(root_0, string_literal17_tree);
				}

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// Lua.g:31:5: 'repeat' block 'until' exp
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(31, 5);
				string_literal18=(IToken)Match(input,58,Follow._58_in_stat132); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal18_tree = (object)adaptor.Create(string_literal18, retval);
				adaptor.AddChild(root_0, string_literal18_tree);
				}
				DebugLocation(31, 14);
				PushFollow(Follow._block_in_stat134);
				block19=block();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, block19.Tree, block19, retval);
				DebugLocation(31, 20);
				string_literal20=(IToken)Match(input,62,Follow._62_in_stat136); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal20_tree = (object)adaptor.Create(string_literal20, retval);
				adaptor.AddChild(root_0, string_literal20_tree);
				}
				DebugLocation(31, 28);
				PushFollow(Follow._exp_in_stat138);
				exp21=exp();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, exp21.Tree, exp21, retval);

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// Lua.g:32:5: 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(32, 5);
				string_literal22=(IToken)Match(input,52,Follow._52_in_stat147); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal22_tree = (object)adaptor.Create(string_literal22, retval);
				adaptor.AddChild(root_0, string_literal22_tree);
				}
				DebugLocation(32, 10);
				PushFollow(Follow._exp_in_stat149);
				exp23=exp();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, exp23.Tree, exp23, retval);
				DebugLocation(32, 14);
				string_literal24=(IToken)Match(input,60,Follow._60_in_stat151); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal24_tree = (object)adaptor.Create(string_literal24, retval);
				adaptor.AddChild(root_0, string_literal24_tree);
				}
				DebugLocation(32, 21);
				PushFollow(Follow._block_in_stat153);
				block25=block();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, block25.Tree, block25, retval);
				DebugLocation(32, 27);
				// Lua.g:32:27: ( 'elseif' exp 'then' block )*
				try { DebugEnterSubRule(5);
				while (true)
				{
					int alt5=2;
					try { DebugEnterDecision(5, false);
					int LA5_0 = input.LA(1);

					if ((LA5_0==47))
					{
						alt5 = 1;
					}


					} finally { DebugExitDecision(5); }
					switch ( alt5 )
					{
					case 1:
						DebugEnterAlt(1);
						// Lua.g:32:28: 'elseif' exp 'then' block
						{
						DebugLocation(32, 28);
						string_literal26=(IToken)Match(input,47,Follow._47_in_stat156); if (state.failed) return retval;
						if (state.backtracking == 0) {
						string_literal26_tree = (object)adaptor.Create(string_literal26, retval);
						adaptor.AddChild(root_0, string_literal26_tree);
						}
						DebugLocation(32, 37);
						PushFollow(Follow._exp_in_stat158);
						exp27=exp();
						PopFollow();
						if (state.failed) return retval;
						if (state.backtracking == 0) adaptor.AddChild(root_0, exp27.Tree, exp27, retval);
						DebugLocation(32, 41);
						string_literal28=(IToken)Match(input,60,Follow._60_in_stat160); if (state.failed) return retval;
						if (state.backtracking == 0) {
						string_literal28_tree = (object)adaptor.Create(string_literal28, retval);
						adaptor.AddChild(root_0, string_literal28_tree);
						}
						DebugLocation(32, 48);
						PushFollow(Follow._block_in_stat162);
						block29=block();
						PopFollow();
						if (state.failed) return retval;
						if (state.backtracking == 0) adaptor.AddChild(root_0, block29.Tree, block29, retval);

						}
						break;

					default:
						goto loop5;
					}
				}

				loop5:
					;

				} finally { DebugExitSubRule(5); }
